--- a/views/formulario/registro.jade
+++ b/views/formulario/registro.jade
@@ -18,7 +18,7 @@ block contenido
 
 			div(class="form-group text")
 				label Usuario :   
-				input(type="text" name="Usuario" placeholder="Usuario" class="form-control") 
+				input(type="text" name="usuario" placeholder="Usuario" class="form-control") 
 
 			div(class="form-group text")
 				label Contraseña:   
