--- a/views/cliente/index.jade
+++ b/views/cliente/index.jade
@@ -1,10 +1,10 @@
 extends ../layout.jade
 block contenido
-	div(class="col-md-5 left-block text-center quitarfloat espacioarriba fondo") 
+	div(class="col-md-5 left-block text-center  espacioarriba fondo") 
 		p usuario
 		-var x=persona.usuario.toUpperCase()
 		label=x
-	div(class="col-md-5 left-block text-center quitarfloat espacioarriba fondo")
+	div(class="col-md-5 left-block text-center  espacioarriba fondo")
 		p nombre
 		-var x=persona.nombre.toUpperCase()+" "+persona.apellido.toUpperCase()
 		label= x
