--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,8 +1,8 @@
 doctype
-html(lang="en" style="background-color:#ECEFF1")
+html(lang="en" style="background-color:#D32F2F")
 	head
 		link(href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet")
 		link(rel="stylesheet"  href="/css/main.css")
 		title Proyecto
-	body(style="background-color:#ECEFF1")
+	body(style="background-color:#D32F2F " )
 		block contenido
