--- a/views/formulario/iniciarsesion.jade
+++ b/views/formulario/iniciarsesion.jade
@@ -1,23 +1,23 @@
 extends ../layout.jade
 block contenido
-	di
-	div(class="col-md-4 center-block text-center quitarfloat espacioarriba fondo")
-		h3(class="rojoclaro") Inicio de sesion
+	div(class="col-md-4 col-sm-5 col-xs-6 borde borderedondo center-block text-center quitarfloat espacioarriba fondo")
+		div()
+			h3(class="rojoclaro") Inicio de sesion
 
-	div(class="col-md-4 col-sm-5 col-xs-7 center-block text-left quitarfloat fondo")
-		form(method="post" action="/cliente/index" style="margin-top:1.5em")
-			div(class="form-group text")
-				label Usuario o Correo Electronico :   
-				input(id="usuarioTf" type="text" name="usuario" placeholder="Usuario o correo electronico" class="form-control" onkeydown="hi" ) 
+		div()
+			form(method="post" action="/cliente/index" style="margin-top:1.5em")
+				div(class="form-group text")
+					label Usuario o Correo Electronico :   
+					input(id="usuarioTf" type="text" name="usuario" placeholder="Usuario o correo electronico" class="form-control" onkeydown="hi" ) 
 				br
-			div(class="form-group text")
-				label Contraseña :   
-				input(type="password" name="contrasena" placeholder="Contraseña" class="form-control" ) 
-			div(class="form-group text-right")
-				input(type="submit" class="btn btn-info" value="Acceder" )
+				div(class="form-group text")
+					label Contraseña :   
+					input(type="password" name="contrasena" placeholder="Contraseña" class="form-control" ) 
+				div(class="form-group text-right")
+					input(type="submit" class="btn " value="Acceder" )
 				br
-	div(class="col-md-5 center-block text-center quitarfloat espacioarriba fondo")
+	div(class="col-md-4 col-sm-5 col-xs-6 center-block text-center quitarfloat espacioarriba2 ")
 		nav
-			a(class="col-md-6" href="/") Inicio
-			a(class="col-md-6 " href="/formulario/registro") Registro
+			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block" href="/") Inicio
+			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block" href="/formulario/registro") Registro
 	
