--- a/views/formulario/registroexitoso.jade
+++ b/views/formulario/registroexitoso.jade
@@ -1,7 +1,7 @@
 extends ../layout.jade
 block contenido
 	div(class="")
-		div(class=" quitar  center-block col-md-3 col-sm-5 col-sx-7 espacioarriba quitarfloat borde borderedondo fondo")
+		div(class=" col-md-4 col-sm-5 col-xs-6 borde borderedondo center-block text-center quitarfloat espacioarriba fondo")
 			div(class="center-block text-center quitarfloat borde borderedondo" )
 				h3(class="rojoclaro ") Registro Exitoso
 			div(class="center-block text-center quitarfloat ")
