--- a/views/cliente/nuevoproyecto.jade
+++ b/views/cliente/nuevoproyecto.jade
@@ -8,7 +8,7 @@ block contenido
 		div()		
 			h3 Nuevo Proyecto
 		div(class="text-left")  
-			form(method="post" action="/cliente/nuevoproyecto" style="	margin-top:1.5em")
+			form(method="post" action="/cliente" style="	margin-top:1.5em")
 				div(class="form-group text")
 					label Nombre :   
 					input(type="text" name="nombre" placeholder="Nombres :" class="form-control" ) 
