--- a/views/cliente/index.jade
+++ b/views/cliente/index.jade
@@ -12,9 +12,11 @@ block contenido
 			h7 MIS PROYECTOS
 
 		div(style=" margin-top:1.5em  ")
+			
 			each item in persona.proyectos
 				li(class="text-left")
-					a(class="rojoclaro")= item.nombre.toUpperCase()
+					a(class="rojoclaro" href="/proyecto/#{item.nombre}")= item.nombre.toUpperCase()
+								
 	div(class="col-md-4  left-block text-center  quitarfloat espacioarriba ")
 		nav
-			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente/nuevoproyecto") Registro
+			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente/nuevoproyecto") Nuevo proyecto
