--- a/views/cliente/nuevoproyecto.jade
+++ b/views/cliente/nuevoproyecto.jade
@@ -1,14 +1,10 @@
 extends ../layout.jade
 block contenido
-	div
-		p(class="fondo") hi
-		-var x=persona.usuario.toUpperCase()
-		label(class="fondo")=x
 	div(class="col-md-4 col-sm-5 col-xs-6 borde borderedondo center-block text-center quitarfloat espacioarriba fondo")
 		div()		
 			h3 Nuevo Proyecto
 		div(class="text-left")  
-			form(method="post" action="/cliente" style="	margin-top:1.5em")
+			form(method="post" action="/cliente/#{persona._id}?_method=put" style="margin-top:1.5em")
 				div(class="form-group text")
 					label Nombre :   
 					input(type="text" name="nombre" placeholder="Nombres :" class="form-control" ) 
