--- a/views/formulario/iniciarsesion.jade
+++ b/views/formulario/iniciarsesion.jade
@@ -7,8 +7,8 @@ block contenido
 		div()
 			form(method="post" action="/cliente/index" style="margin-top:1.5em")
 				div(class="form-group text")
-					label Usuario o Correo Electronico :   
-					input(id="usuarioTf" type="text" name="usuario" placeholder="Usuario o correo electronico" class="form-control" onkeydown="hi" ) 
+					label Usuario:   
+					input(id="usuarioTf" type="text" name="usuario" placeholder="Usuario" class="form-control" onkeydown="hi" ) 
 				br
 				div(class="form-group text")
 					label Contraseña :   
