--- a/views/cliente/proyecto.jade
+++ b/views/cliente/proyecto.jade
@@ -20,7 +20,10 @@ block contenido
 	div(class="col-md-4  left-block text-center  quitarfloat espacioarriba ")
 		nav
 			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente") volver a la pagina anterior
-					
+	
+	
+			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente/proyecto/nuevatarea/#{nombre}") Nueva tarea
+			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente/nuevacolaborador") Agregar Colaborador
 					
 					
 				
