--- a/views/cliente/proyecto.jade
+++ b/views/cliente/proyecto.jade
@@ -16,14 +16,14 @@ block contenido
 		div
 			label Tareas :
 			each item in tareas
-				label item
+				label=item.nombre
 	div(class="col-md-4  left-block text-center  quitarfloat espacioarriba ")
 		nav
 			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente") volver a la pagina anterior
 	
 	
 			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente/proyecto/nuevatarea/#{nombre}") Nueva tarea
-			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente/nuevacolaborador") Agregar Colaborador
+			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block quitarfloat" href="/cliente/nuevocolaborador/#{nombre}") Agregar Colaborador
 					
 					
 				
