--- a/views/formulario/iniciarsesion.jade
+++ b/views/formulario/iniciarsesion.jade
@@ -1,10 +1,10 @@
 extends ../layout.jade
 block contenido
-	div(class="col-md-4 col-sm-5 col-xs-6 borde borderedondo center-block text-center quitarfloat espacioarriba fondo")
+	div(class="col-md-4 col-sm-5 col-xs-6 borde negrofondo colorborde borderedondo center-block text-center quitarfloat espacioarriba fondo")
 		div()
 			h3(class="rojoclaro") Inicio de sesion
 
-		div()
+		div(style=" color: #FFFFFF ")
 			form(method="post" action="/cliente/index" style="margin-top:1.5em")
 				div(class="form-group text")
 					label Usuario:   
