--- a/views/formulario/registro.jade
+++ b/views/formulario/registro.jade
@@ -1,9 +1,9 @@
 extends ../layout.jade
 block contenido
-	div(class="col-md-4 col-sm-5 col-xs-6 borde borderedondo center-block text-center quitarfloat espacioarriba fondo")
+	div(class="col-md-4 col-sm-5 col-xs-6 borde colorborde negrofondo borde borderedondo center-block text-center quitarfloat espacioarriba fondo")
 		div()
 			h2(class="rojoclaro") Registrate
-		div()
+		div(style=" color: #FFFFFF ")
 			form(method="post" action="/formulario" style="margin-top:1.5em")
 				div(class="form-group text")
 					label Nombres :   
