--- a/views/cliente/nuevatarea.jade
+++ b/views/cliente/nuevatarea.jade
@@ -13,4 +13,4 @@ block contenido
 						each item in cols
 							option(value=item) item.nombre
 				div(class="form-group text-right")
-					input(type="submit" class="btn btn-danger" 	value="Añadir Tarea")
+					input(type="submit" class="btn btn-danger" 	value="Crear Proyecto" )
