--- a/views/index.jade
+++ b/views/index.jade
@@ -1,9 +1,9 @@
 extends ./layout.jade
 block contenido
-	div(class="col-md-4 col-sm-5 col-xs-6 borde borderedondo center-block text-center quitarfloat espacioarriba ")
+	div(class="col-md-4 col-sm-5 col-xs-6 borde borderedondo center-block text-center quitarfloat espacioarriba fondo")
 		img(src="/imgs/icono.png")
-		h3(class="otrogris") Tu Proyecto
+		h3(class="rojoclaro") Tu Proyecto
 	div(class="col-md-4 col-sm-5 col-xs-6 center-block text-center quitarfloat espacioarriba2")		
 		nav(class="center-block")
-			a(class="col-md-6 col-xs-10 negrofondo borde borderedondo center-block" href="formulario/registro") Registrarse
-			a(class="col-md-6 col-xs-10 negrofondo borde borderedondo center-block" href="formulario/iniciarsesion") Iniciar sesion
+			a(class="col-md-6 col-xs-10 grisclaro  borde borderedondo center-block" href="formulario/registro") Registrarse
+			a(class="col-md-6 col-xs-10 grisclaro borde borderedondo center-block" href="formulario/iniciarsesion") Iniciar sesion
